fixed `executeWithPrefix`